--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:background="@color/peach2"
+        android:background="@color/pinkk"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
@@ -21,7 +21,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="𝑳𝒐𝒈𝒊𝒏"
+            android:text="𝘓𝘖𝘎-𝘐𝘕"
             android:textStyle="bold"
             android:textColor="#fff"
             android:layout_gravity="center"
