--- a/app/src/main/res/layout/custom_grid_layout.xml
+++ b/app/src/main/res/layout/custom_grid_layout.xml
@@ -21,7 +21,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/_18ssp"
                 android:id="@+id/imgvw"
-                tools:srcCompat="@drawable/sepeda"
+                tools:srcCompat="@drawable/sepdanv"
                 android:layout_width="@dimen/_120sdp"
                 android:layout_height="@dimen/_80sdp"/>
         <TextView
@@ -55,7 +55,7 @@
                    android:text="Sewa"
                    android:textSize="@dimen/_8sdp"
                    android:textColor="#fff"
-                   android:background="@color/peach3"
+                   android:background="@color/pinky"
                    android:layout_width="@dimen/_50ssp"
                    android:layout_height="@dimen/_25ssp"/>
            </RelativeLayout>
