--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBackground">#1EA2E9</color>
     <color name="colorEmail">#239997DD</color>
-    <color name="peach">#FFA777</color>
-    <color name="peach2">#FF9961</color>
-    <color name="peach3">#ED5B0B</color>
+    <color name="pinky">#DC5583</color>
+    <color name="pinkk">#C52B5F</color>
+    <color name="pink">#ECA1BA</color>
 </resources>
